fix new beer preview picture alignment

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,6 @@ div.rating {
 }
 .no-bullet-item {
 	margin-top: 15px;
-	float: left;
 }
 .sub-item {
 	width: 48%;%;
